--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -3,19 +3,19 @@
     <div class=" form-control " style="margin-left: 400px;width: 300px;height: 400px ;border: 1px solid transparent;">
       <h2 align="center" style="color:#45aed6;;">Reset Password</h2>
       <br>
-      <div class=" form-group col-lg-6">
+      <div class=" form-group col-lg-6" [ngClass]="{'has-error':!userForm.controls['userid'].valid && userForm.controls['userid'].touched}">
         <div id="snackbar" [innerHTML]="toastMessage"></div>
-        <label class="label-name required "> {{ 'Userid' | translate }}</label>
+        <label class="label-name required control-label"> {{ 'Userid' | translate }}</label>
         <br>
-        <input type="text" id="userid" formControlName="userid" class="resetUserid">
-        <div class="error" *ngIf="!userForm.controls['userid'].valid && userForm.controls['userid'].touched">{{'Please Enter UserId' | translate}}.</div>
+        <input type="text" id="userid" formControlName="userid" class="resetUserid form-control">
+        <app-control-messages  style="width: 150px" [formGroup]="userForm" [displayName]="'User Id'" [control]="userForm.controls['userid']"></app-control-messages>
       </div>
 
-      <div class="  col-lg-9 " style="margin-right: 30px">
-        <label class=" required label-name"> {{ 'New Password' | translate }} </label>
+      <div class="  col-lg-9 " style="margin-right: 30px"[ngClass]="{'has-error':!userForm.controls['password'].valid && userForm.controls['password'].touched}">
+        <label class=" required label-name control-label"> {{ 'New Password' | translate }} </label>
         <br>
-        <input type="password" id="password" formControlName="password" class="resetUserid">
-        <div class="error" *ngIf="!userForm.controls['password'].valid && userForm.controls['password'].touched">{{'Please Enter Password' | translate}}.</div>
+        <input type="password" id="password" formControlName="password" class="resetUserid form-control">
+        <app-control-messages [formGroup]="userForm" [displayName]="'password'" [control]="userForm.controls['password']"></app-control-messages>
       </div>
 
 
