--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,10 @@
-
+<app-header></app-header>
+<div *ngIf="showSelected">
+<app-menu></app-menu>
+</div>
 <router-outlet>
     <ng4-loading-spinner> </ng4-loading-spinner>
 </router-outlet>
 
-<header id="header">
-    <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner" style="height: 70px;">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="img-responsive navbar-brand" href="index.html"><img style="margin-left: -30px" src="assets/Images/logo.png" alt="logo"></a>
-            </div>
-    
-            
-        </div>
-    </nav>
-  </header>
+
   
