--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -1,4 +1,4 @@
-<app-home></app-home>
+<app-menu></app-menu>
 <ng4-loading-spinner> </ng4-loading-spinner>
 <div class=" main-class" >
   <div class="primary-container">
@@ -62,44 +62,43 @@
         </div>
         <div class="modal-body">
           <div class="row" style="margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!attendanceForm.controls['employee'].valid && attendanceForm.controls['employee'].touched}">
                
-              <label class="label-name ">{{ 'EmployeeId' | translate }}</label>
-              <select class="loginUserid demo" formControlName="employee" name="employee" id="employee"   > 
+              <label class="label-name control-label">{{ 'EmployeeId' | translate }}</label>
+              <select class="loginUserid demo form-control" formControlName="employee" name="employee" id="employee"   > 
                 <option *ngFor=" let employee of allEmployee" [value]="employee.id">
                   {{employee.userid}}
                 </option>
                 
               </select>
-              <div class="error" *ngIf="!attendanceForm.controls['employee'].valid && attendanceForm.controls['employee'].touched">{{'Please  Select Employee Id' | translate}}.</div>
+              <app-control-messages [formGroup]="attendanceForm" [displayName]="'Employe Id'" [control]="attendanceForm.controls['employee']"></app-control-messages>
             </div>
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Intime' | translate }}</label>
-                <input type="time" step="0" id="intime" formControlName="intime" class="loginUserid">
-                <div class="error" *ngIf="!attendanceForm.controls['intime'].valid && attendanceForm.controls['intime'].touched">{{'Please Enter Intime' | translate}}.</div>
-                <div id="intime_validation" class="passvalidation"></div>
+              <div class=" form-group col-lg-6" [ngClass]="{'has-error':!attendanceForm.controls['intime'].valid && attendanceForm.controls['intime'].touched}">
+                <label class="label-name control-label "> {{ 'Intime' | translate }}</label>
+                <input type="time" step="0" id="intime" formControlName="intime" class="loginUserid form-control">
+                <app-control-messages [formGroup]="attendanceForm" [displayName]="'In Time'" [control]="attendanceForm.controls['intime']"></app-control-messages>
               </div>
             </div>
           </div>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'OutTime' | translate }}</label>
+            <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':!attendanceForm.controls['outtime'].valid && attendanceForm.controls['outtime'].touched}">
+              <label class="label-name control-label">{{ 'OutTime' | translate }}</label>
               <br>
-              <input type="time" step="0" formControlName="outtime" class="loginUserid" (blur)="timeValidation();" (change)="timeValidation();">
-              <div class="error" *ngIf="!attendanceForm.controls['outtime'].valid &&  attendanceForm.controls['outtime'].touched">{{'Please Enter Outtime' | translate}}</div>
-              <div id="outtime_validation" class="error"></div>
+              <input type="time" step="0" formControlName="outtime" class="loginUserid form-control" (blur)="timeValidation()"(change)="timeValidation()" >
+              <div class="error" id="outtime_validation"></div>
+              <app-control-messages [formGroup]="attendanceForm" [displayName]="'Out Time'" [control]="attendanceForm.controls['outtime']"></app-control-messages>
             </div>
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Date' | translate }}</label>
-                <input type="date" formControlName="date" class="loginUserid">
-                <div class="error" *ngIf="!attendanceForm.controls['date'].valid &&  attendanceForm.controls['date'].touched">{{'Please Enter Today  Date' | translate}}</div>
+              <div class=" form-group col-lg-6" [ngClass]="{'has-error':!attendanceForm.controls['date'].valid && attendanceForm.controls['date'].touched}">
+                <label class="label-name control-label "> {{ 'Date' | translate }}</label>
+                <input type="date" formControlName="date" class="loginUserid form-control">
+                <app-control-messages [formGroup]="attendanceForm" [displayName]="'Date'" [control]="attendanceForm.controls['date']"></app-control-messages>
               </div>
             </div>
           </div>
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="loadingSpinner();toastMessageDisplay()">{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)=" toastMessageDisplay();">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
       margin-left: 20px;">Close</button>
           </div>
