--- a/src/app/components/control-messages/control-messages.component.html
+++ b/src/app/components/control-messages/control-messages.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="errorMessage !== null" class="errorMessage" >
-<div class="help-block">{{errorMessage}}</div> 
+<div class="help-block error" >{{errorMessage}}</div> 
 </div>
