--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -1,4 +1,4 @@
-<app-home></app-home>
+<app-menu></app-menu>
 <div class=" main-class">
   <div class="primary-container">
     <header class="header">
@@ -60,45 +60,45 @@
             <span class="basicinfo">Basic Info</span>
           </h6>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'UserId' | translate }}</label>
+            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!employeeForm.controls['userid'].valid && employeeForm.controls['userid'].touched}">
+              <label class="label-name control-label">{{ 'UserId' | translate }}</label>
               <br>
-              <input type="text" formControlName="userid" id="userid" class="loginUserid" >
+              <input type="text" formControlName="userid" id="userid" class="loginUserid form-control" >
               
               <div class ="valid"  id="userid_validation"></div>
-              <app-control-messages [control]="employeeForm.controls.userid"></app-control-messages>
+              <app-control-messages [formGroup]="employeeForm" [displayName]="'User Id'" [control]="employeeForm.controls['userid']"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Password' | translate }}</label>
-                <input type="password" formControlName="password" class="loginUserid">              
-                <app-control-messages [control]="employeeForm.controls.password"></app-control-messages>
+              <div class=" form-group col-lg-6"[ngClass]="{'has-error':!employeeForm.controls['password'].valid && employeeForm.controls['password'].touched}">
+                <label class="label-name control-label"> {{ 'Password' | translate }}</label>
+                <input type="password" formControlName="password" class="loginUserid form-control">              
+                <app-control-messages [formGroup]="employeeForm" [displayName]="'password'" [control]="employeeForm.controls['password']"></app-control-messages>
               </div>
             </div>
           </div>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'FirstName' | translate }}</label>
+            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!employeeForm.controls['firstName'].valid && employeeForm.controls['firstName'].touched}">
+              <label class="label-name control-label">{{ 'FirstName' | translate }}</label>
               <br>
-              <input type="text" formControlName="firstName" class="loginUserid" onkeypress='return event.charCode >= 65 && event.charCode <= 122'>
-              <div class="error" *ngIf="!employeeForm.controls['firstName'].valid && employeeForm.controls['firstName'].touched">{{'Please Enter First Name' | translate}}.</div>
+              <input type="text" formControlName="firstName" class="loginUserid form-control" onkeypress='return event.charCode >= 65 && event.charCode <= 122'>
+              <app-control-messages [formGroup]="employeeForm" [displayName]="'First Name'" [control]="employeeForm.controls['firstName']"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'LastName' | translate }}</label>
-                <input type="text" formControlName="lastName" class="loginUserid" onkeypress='return event.charCode >= 65 && event.charCode <= 122'>
-                <div class="error" *ngIf="!employeeForm.controls['lastName'].valid && employeeForm.controls['lastName'].touched">{{'Please Enter Last Name' | translate}}.</div>
+              <div class=" form-group col-lg-6"[ngClass]="{'has-error':!employeeForm.controls['lastName'].valid && employeeForm.controls['lastName'].touched}">
+                <label class="label-name control-label"> {{ 'LastName' | translate }}</label>
+                <input type="text" formControlName="lastName" class="loginUserid form-control" onkeypress='return event.charCode >= 65 && event.charCode <= 122'>
+                <app-control-messages [formGroup]="employeeForm" [displayName]="'Last Name'" [control]="employeeForm.controls['lastName']"></app-control-messages>
               </div>
             </div>
           </div>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'EmailId' | translate }}</label>
+            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!employeeForm.controls['emailid'].valid && employeeForm.controls['emailid'].touched}">
+              <label class="label-name control-label">{{ 'EmailId' | translate }}</label>
               <br>
-              <input type="text" formControlName="emailid" class="loginUserid">
-              <div class="error" *ngIf="!employeeForm.controls['emailid'].valid && employeeForm.controls['emailid'].touched">{{'Please Enter EmailId' | translate}}.</div>
+              <input type="text" formControlName="emailid" class="loginUserid form-control">
+              <app-control-messages [formGroup]="employeeForm" [displayName]="'Employe Id'" [control]="employeeForm.controls['emailid']"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
@@ -128,22 +128,22 @@
               </select>
             </div>
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Date Of Joining' | translate }}</label>
-                <input type="date" formControlName="dateOfJoining" class="loginUserid">
-                <div class="error" *ngIf="!employeeForm.controls['dateOfJoining'].valid && employeeForm.controls['dateOfJoining'].touched">{{'Please Enter Date of Joining' | translate}}.</div>
+              <div class=" form-group col-lg-6"[ngClass]="{'has-error':!employeeForm.controls['dateOfJoining'].valid && employeeForm.controls['dateOfJoining'].touched}">
+                <label class="label-name control-label"> {{ 'Date Of Joining' | translate }}</label>
+                <input type="date" formControlName="dateOfJoining" class="loginUserid form-control">
+                <app-control-messages [formGroup]="employeeForm" [displayName]="'Date Of Joining'" [control]="employeeForm.controls['dateOfJoining']"></app-control-messages>
               </div>
             </div>
           </div>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'EmployeeType' | translate }}</label>
-              <select class="loginUserid" formControlName="employeetype" id="employeetype" name="employeetype">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!employeeForm.controls['employeetype'].valid && employeeForm.controls['employeetype'].touched}">
+              <label class="label-name control-label">{{ 'EmployeeType' | translate }}</label>
+              <select class="loginUserid form-control" formControlName="employeetype" id="employeetype" name="employeetype">
                 <option *ngFor=" let employeetype of allEmployeetype" [value]="employeetype.id">
                   {{employeetype.type}}
                 </option>
               </select>
-              <div class="error" *ngIf="!employeeForm.controls['employeetype'].valid && employeeForm.controls['employeetype'].touched">{{'Please Select Employee Type' | translate}}.</div>
+              <app-control-messages [formGroup]="employeeForm" [displayName]="'Employee Type'" [control]="employeeForm.controls['employeetype']"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
@@ -155,44 +155,44 @@
             </div>
           </div>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'User Type' | translate }}</label>
-              <select class="loginUserid" formControlName="usertype" id="userType" name="userType">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!employeeForm.controls['usertype'].valid && employeeForm.controls['usertype'].touched}">
+              <label class="label-name control-label">{{ 'User Type' | translate }}</label>
+              <select class="loginUserid form-control" formControlName="usertype" id="userType" name="userType">
                 <option *ngFor=" let usertype of allUsertypes" [value]="usertype.id">
                   {{usertype.usertypeName}}
                 </option>
               </select>
-              <div class="error" *ngIf="!employeeForm.controls['usertype'].valid && employeeForm.controls['usertype'].touched">{{'Please Select User Type' | translate}}.</div>
+              <app-control-messages [formGroup]="employeeForm" [displayName]="'User Type'" [control]="employeeForm.controls['usertype']"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Designation' | translate }}</label>
-                <select class="loginUserid" formControlName="designation" id="designation" name="designation"> 
+              <div class=" form-group col-lg-6" [ngClass]="{'has-error':!employeeForm.controls['designation'].valid && employeeForm.controls['designation'].touched}">
+                <label class="label-name control-label"> {{ 'Designation' | translate }}</label>
+                <select class="loginUserid form-control" formControlName="designation" id="designation" name="designation"> 
                   <option *ngFor=" let designation of allDesignation" [value]="designation.id">
                     {{designation.name}}
                   </option>
                 </select>
-                <div class="error" *ngIf="!employeeForm.controls['designation'].valid && employeeForm.controls['designation'].touched">{{'Please Select Designation' | translate}}.</div>
+                <app-control-messages [formGroup]="employeeForm" [displayName]="'Designation'" [control]="employeeForm.controls['designation']"></app-control-messages>
               </div>
             </div>
           </div>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'ReportTo' | translate }}</label>
-              <select class="loginUserid" formControlName="reportTo" id="reportTo" name="reportTo" (click)=reportTo()  >
+            <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':!employeeForm.controls['reportTo'].valid && employeeForm.controls['reportTo'].touched}">
+              <label class="label-name control-label">{{ 'ReportTo' | translate }}</label>
+              <select class="loginUserid form-control" formControlName="reportTo" id="reportTo" name="reportTo" (click)=reportTo()  >
                 <option *ngFor=" let menu of selectMenu" [value]="menu.id">
                   {{menu.userid}}
                 </option>
               </select>
-              <div class="error" *ngIf="!employeeForm.controls['reportTo'].valid && employeeForm.controls['reportTo'].touched"></div>
+              <app-control-messages [formGroup]="employeeForm" [displayName]="'ReportTo'" [control]="employeeForm.controls['reportTo']"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Department' | translate }}</label>
-                <input type="text" formControlName="department" class="loginUserid">
-                <div class="error" *ngIf="!employeeForm.controls['department'].valid && employeeForm.controls['department'].touched">{{'Please Enter Department' | translate}}.</div>
+              <div class=" form-group col-lg-6" [ngClass]="{'has-error':!employeeForm.controls['department'].valid && employeeForm.controls['department'].touched}">
+                <label class="label-name control-label"> {{ 'Department' | translate }}</label>
+                <input type="text" formControlName="department" class="loginUserid form-control">
+                <app-control-messages [formGroup]="employeeForm" [displayName]="'department'" [control]="employeeForm.controls['department']"></app-control-messages>
               </div>
             </div>
           </div>
@@ -200,32 +200,32 @@
             <span class="basicinfo">Personal</span>
           </h6>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'Mobile Number' | translate }}</label>
+            <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':!employeeForm.controls['phoneNumber'].valid && employeeForm.controls['phoneNumber'].touched}">
+              <label class="label-name control-label">{{ 'Mobile Number' | translate }}</label>
               <br>
-              <input type="text" maxlength="10" formControlName="phoneNumber" class="loginUserid" onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
-              <div class="error" *ngIf="!employeeForm.controls['phoneNumber'].valid && employeeForm.controls['phoneNumber'].touched">{{'Please Enter phone Number' | translate}}.</div>
+              <input type="text" maxlength="10" formControlName="phoneNumber" class="loginUserid form-control" onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
+              <app-control-messages [formGroup]="employeeForm" [displayName]="'Mobile Number'" [control]="employeeForm.controls['phoneNumber']"></app-control-messages>
             </div>
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Address' | translate }}</label>
-                <input type="text" formControlName="address" class="loginUserid">
-                <div class="error" *ngIf="!employeeForm.controls['address'].valid && employeeForm.controls['address'].touched">{{'Please Enter Address' | translate}}.</div>
+              <div class=" form-group col-lg-6" [ngClass]="{'has-error':!employeeForm.controls['address'].valid && employeeForm.controls['address'].touched}">
+                <label class="label-name control-label"> {{ 'Address' | translate }}</label>
+                <input type="text" formControlName="address" class="loginUserid form-control">
+                <app-control-messages [formGroup]="employeeForm" [displayName]="'address'" [control]="employeeForm.controls['address']"></app-control-messages>
               </div>
             </div>
           </div>
           <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'Date Of Birth' | translate }}</label>
+            <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!employeeForm.controls['dateOfBirth'].valid && employeeForm.controls['dateOfBirth'].touched}">
+              <label class="label-name control-label">{{ 'Date Of Birth' | translate }}</label>
               <br>
-              <input type="date" formControlName="dateOfBirth" class="loginUserid">
-              <app-control-messages [control]="employeeForm.controls.dateOfBirth"></app-control-messages>
+              <input type="date" formControlName="dateOfBirth" class="loginUserid form-control">
+              <app-control-messages [formGroup]="employeeForm" [displayName]="'Date Of Birth'" [control]="employeeForm.controls['dateOfBirth']"></app-control-messages>
             </div>
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Salary' | translate }}</label>
-                <input type="number" formControlName="salary" class="loginUserid">
-                <div class="error" *ngIf="!employeeForm.controls['salary'].valid && employeeForm.controls['salary'].touched">{{'Please Enter Salary' | translate}}.</div>
+              <div class=" form-group col-lg-6" [ngClass]="{'has-error':!employeeForm.controls['salary'].valid && employeeForm.controls['salary'].touched}">
+                <label class="label-name control-label"> {{ 'Salary' | translate }}</label>
+                <input type="number" formControlName="salary" class="loginUserid form-control">
+                <app-control-messages [formGroup]="employeeForm" [displayName]="'salary'" [control]="employeeForm.controls['salary']"></app-control-messages>
               </div>
             </div>
           </div>
