--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,9 +15,7 @@
           <label class="control-label" for="userid"> {{ 'User Id' | translate }}</label>
           <input type="text" formControlName="userid" id="userid" class="form-control">
           <app-control-messages [formGroup]="userForm" [displayName]="'User Id'" [control]="userForm.controls['userid']"></app-control-messages>
-
         </div>
-
 
         <div class="form-group col-sm-12 " [ngClass]="{'has-error':!userForm.controls['password'].valid && userForm.controls['password'].touched}">
           <label class="control-label" for="password"> {{ 'Password' | translate }} </label>
@@ -26,7 +24,7 @@
         </div>
 
         <div class="form-group">
-          <a routerLink="/resetpassword">{{ 'ResetPassword' | translate }}</a>
+          <a style="margin-left: 270px;" routerLink="/resetpassword">{{ 'ResetPassword' | translate }}</a>
         </div>
 
           <button type="submit" class="btn btn-primary btn-lg btn-block" [disabled]="!userForm.valid" (click)="validate();">{{ 'Sign In' | translate }}</button>
@@ -35,14 +33,4 @@
     </div>
   </div>
 </form>
-
-<footer id="footer" style="margin-top: 250px;">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-        Designed by <a target="_blank" href="http://nextechservices.in/" title="Web applications development angularjs websites">Nextech Services Pvt Ltd. </a>
-      </div>
-
-    </div>
-  </div>
-</footer>
+<app-footer></app-footer>
