--- a/src/app/components/usertype/usertype.component.html
+++ b/src/app/components/usertype/usertype.component.html
@@ -1,4 +1,4 @@
-<app-home></app-home>
+<app-menu></app-menu>
 <div class=" main-class">
   <div class="primary-container" style="height: 100%">
     <header class="header">
@@ -55,21 +55,21 @@
           <h2 class="modal-title modaltitle">{{'Add New User Type'|translate}}</h2>
         </div>
         <div class="modal-body">
-          <div class="row" style="    margin-top: 30px">
-            <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':isError}">
-              <label class="label-name ">{{ 'Name' | translate }}</label>
+          <div class="row" style="    margin-top: 30px"[ngClass]="{'has-error':!usertypeForm.controls['usertypeName'].valid && usertypeForm.controls['usertypeName'].touched}">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;" >
+              <label class="label-name control-label">{{ 'Name' | translate }}</label>
               <br>
               <input type="text"  formControlName="usertypeName" id="usertypeName" name="usertypeName"
-                class="loginUserid" placeholder="Name">
-                <div class="error" *ngIf="!usertypeForm.controls['usertypeName'].valid && usertypeForm.controls['usertypeName'].touched">{{'Please Enter User Type name' | translate}}.</div>              
+                class="loginUserid form-control" placeholder="Name">
+                <app-control-messages [formGroup]="usertypeForm" [displayName]="'Name'" [control]="usertypeForm.controls['usertypeName']"></app-control-messages>
             </div>
 
             <div class="col-lg-offset-5">
-              <div class=" form-group col-lg-6">
-                <label class="label-name "> {{ 'Description' | translate }}</label>
+              <div class=" form-group col-lg-6"[ngClass]="{'has-error':!usertypeForm.controls['description'].valid && usertypeForm.controls['description'].touched}">
+                <label class="label-name control-label"> {{ 'Description' | translate }}</label>
                 <input type="text" formControlName="description" id="description" name="description"
-                  class="loginUserid" placeholder="Description">
-                  <div class="error" *ngIf="!usertypeForm.controls['description'].valid && usertypeForm.controls['description'].touched">{{'Please Enter User Type Description' | translate}}.</div>              
+                  class="loginUserid form-control" placeholder="Description">
+                  <app-control-messages [formGroup]="usertypeForm" [displayName]="'Description'" [control]="usertypeForm.controls['description']"></app-control-messages>             
               </div>
             </div>
           </div>
