--- a/src/app/components/attendance/attendance.component.css
+++ b/src/app/components/attendance/attendance.component.css
@@ -44,3 +44,28 @@ butHeight{
    padding-top: 7px;
      width: 250px 
   }
+
+  .green-circle {
+    float: left;
+    width: 10px;
+    height: 10px;
+    background-color: green;
+    border-radius: 50%;
+    margin-left: 55px;
+}
+.lable-description {
+    float: left;
+    padding-left: 15px;
+    font-size: 1.5rem;
+    color: #444c5c;
+    font-weight: 600;
+    margin-top: -5px;
+}
+.red-circle {
+    float: left;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    margin-left: 15px;
+}
