--- a/src/app/components/daily-task/daily-task.component.css
+++ b/src/app/components/daily-task/daily-task.component.css
@@ -4,3 +4,34 @@
     text-align: left;
     line-height: 3.5rem;
 }
+.red {
+    color: red; 
+}
+
+.black {
+    color: black;
+}
+.green-circle {
+    float: left;
+    width: 10px;
+    height: 10px;
+    background-color: green;
+    border-radius: 50%;
+    margin-left: 55px;
+}
+.lable-description {
+    float: left;
+    padding-left: 15px;
+    font-size: 1.5rem;
+    color: #444c5c;
+    font-weight: 600;
+    margin-top: -5px;
+}
+.red-circle {
+    float: left;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 50%;
+    margin-left: 15px;
+}
