--- a/src/app/components/daily-task/daily-task.component.html
+++ b/src/app/components/daily-task/daily-task.component.html
@@ -9,8 +9,16 @@
       </button>
     </div>
     <div layout="row" class="userlist ">{{'Daily Task List' | translate}}</div>
+    <div>
+    <div class="green-circle"></div>
+    <div class="lable-description">Daily Task Complete</div>
+    <div class="red-circle"></div>
+    <div class="lable-description">Daily Task InComplete</div>
+  </div>
+    <br>
+    
     <table class="table table-striped table-hover table-fixed settable">
-      <thead>
+      <thead >
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
           <th class="col-xs-2">EmployeeId</th>
@@ -20,13 +28,13 @@
           <th class="col-xs-3">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let dailyTask of allDailyTask| paginate: { itemsPerPage: 8, currentPage: p}">
+      <tr *ngFor="let dailyTask of allDailyTask| paginate: { itemsPerPage: 8, currentPage: p}" [ngStyle]="{'color':dailyTask.status === 'Completed' ? 'green' : 'red' }">
         <td class="tablerow col-xs-1">{{dailyTask.id}}</td>
         <td class="tablerow col-xs-2">{{dailyTask.employee.userid}}</td>
         <td class="tablerow col-xs-2">{{dailyTask.date}}</td>
         <td class="tablerow col-xs-2">{{dailyTask.taskName}}</td>
       
-        <td class="tablerow col-xs-2" >{{dailyTask.status}}</td>
+        <td class="tablerow col-xs-2"  >{{dailyTask.status}}</td>
         <td class="tablerow col-xs-3">
           <span class="action-link" role="button" tabindex="0" (click)="loadDailyTaskToEdit(dailyTask.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
