<add weekenddate validation in leave page>

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,9 +9,10 @@
                   <span class="icon-bar"></span>
               </button>
               <a class="img-responsive navbar-brand" href="index.html"><img style="margin-left: -30px" src="assets/Images/logo.png" alt="logo"></a>
-          </div>
-  
-          
+          </div>          
       </div>
+      <button class="btn btn-primary logoutbtn" type="button" (click)="redirectToLoginPage()" >{{'LogOut'|translate}}
+    </button>
   </nav>
+ 
 </header>
