--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -26,20 +26,20 @@
         <div class="lable-description">Absent Employee</div>
       </div>
         <br>
-    <table class="table table-striped table-hover table-fixed settable">
+    <table class="table table-striped table-hover table-fixed settable" [mfData]="allAttendance" #mf="mfDataTable">
       <thead>
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
-          <th class="col-xs-2">{{'EmployeeId'|translate}}</th>
+          <th class="col-xs-2"><mfDefaultSorter by="employee.userid" class="col-xs-2">{{'EmployeeId'|translate}}</mfDefaultSorter></th>
           <th class="col-xs-2">{{ 'Intime' | translate }}</th>
           <th class="col-xs-2">{{ 'Outtime' | translate }}</th>
-          <th class="col-xs-2" style="margin-right: -20px;">{{ 'Date' | translate }}</th>
+          <th class="col-xs-2" style="margin-right: -20px;"><mfDefaultSorter by="date" class="col-xs-2">{{ 'Date' | translate }}</mfDefaultSorter> </th>
           <th class="col-xs-1">{{ 'Status' | translate }}</th>
           <th class="col-xs-2" style="margin-left: 20px">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let attendance of allAttendance |filter :date| orderBy : Attendance | paginate: { itemsPerPage: 8, currentPage: p} "[ngStyle]="{'color':attendance.status === 'Leave' ? 'red' : 'green' }">
-        <td class="tablerow col-xs-1">{{attendance.id}}</td>
+      <tr *ngFor="let attendance of mf.data |filter :date | paginate: { itemsPerPage: 8, currentPage: p} let i = index;"[ngStyle]="{'color':attendance.status === 'Leave' ? 'red' : 'green' }">
+        <td class="tablerow col-xs-1">{{i+1}}</td>
         <td class="tablerow col-xs-2  ">{{attendance.employee.userid}}</td>
         <td class="tablerow col-xs-2">{{attendance.intime}}</td>
         <td class="tablerow col-xs-2">{{attendance.outtime}}</td>
@@ -99,7 +99,7 @@
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6" [ngClass]="{'has-error':!attendanceForm.controls['date'].valid && attendanceForm.controls['date'].touched}">
                 <label class="label-name control-label "> {{ 'Date' | translate }}</label>
-                <input type="date" formControlName="date" class="loginUserid form-control">
+                <input type="date" formControlName="date" class="loginUserid form-control" id="date">
                 <app-control-messages [formGroup]="attendanceForm" [displayName]="'Date'" [control]="attendanceForm.controls['date']"></app-control-messages>
               </div>
             </div>
