--- a/src/app/components/daily-task/daily-task.component.html
+++ b/src/app/components/daily-task/daily-task.component.html
@@ -17,19 +17,19 @@
   </div>
     <br>
     
-    <table class="table table-striped table-hover table-fixed settable">
+    <table class="table table-striped table-hover table-fixed settable" [mfData]="allDailyTask" #mf="mfDataTable">
       <thead >
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
-          <th class="col-xs-2">EmployeeId</th>
-          <th class="col-xs-2"> {{ 'Date' | translate }}</th>
+          <th class="col-xs-2"><mfDefaultSorter by="employee.userid" class="col-xs-2">{{'EmployeeId'|translate}}</mfDefaultSorter></th>
+          <th class="col-xs-2"><mfDefaultSorter by="date" class="col-xs-2">{{ 'Date' | translate }}</mfDefaultSorter> </th>
           <th class="col-xs-2" >{{ 'TaskName' | translate }}</th>
           <th class="col-xs-2" >{{ 'Status' | translate }}</th>
           <th class="col-xs-3">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let dailyTask of allDailyTask| paginate: { itemsPerPage: 8, currentPage: p}" [ngStyle]="{'color':dailyTask.status === 'Completed' ? 'green' : 'red' }">
-        <td class="tablerow col-xs-1">{{dailyTask.id}}</td>
+      <tr *ngFor="let dailyTask of mf.data| paginate: { itemsPerPage: 8, currentPage: p}let i = index" [ngStyle]="{'color':dailyTask.status === 'Completed' ? 'green' : 'red' }">
+        <td class="tablerow col-xs-1">{{i+1}}</td>
         <td class="tablerow col-xs-2">{{dailyTask.employee.userid}}</td>
         <td class="tablerow col-xs-2">{{dailyTask.date}}</td>
         <td class="tablerow col-xs-2">{{dailyTask.taskName}}</td>
