--- a/src/app/components/designation/designation.component.html
+++ b/src/app/components/designation/designation.component.html
@@ -17,19 +17,19 @@
         </div>
     </div>
     <div layout="row" class="userlist ">{{'Designation List'|translate}}</div>
-    <table class="table table-striped table-hover table-fixed settable">
+    <table class="table table-striped table-hover table-fixed settable"[mfData]="allDesignation" #mf="mfDataTable">
       <thead>
         <tr>
             <th class="col-xs-1" >{{ 'No' | translate }}</th>
-          <th class="col-xs-3">{{ 'Name' | translate }}</th>
+          <th class="col-xs-3"><mfDefaultSorter by="name" class="col-xs-3">{{ 'Name' | translate }}</mfDefaultSorter></th>
           <th class="col-xs-3">{{ 'Band' | translate }}</th>
           <th class="col-xs-3">{{ 'Level' | translate }}</th>
 
           <th >{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let designation of allDesignation | filter:name | paginate: { itemsPerPage: 8, currentPage: p} ">
-          <td class="tablerow col-xs-1">{{designation.id}}</td>
+      <tr *ngFor="let designation of mf.data | filter:name | paginate: { itemsPerPage: 8, currentPage: p} let i = index">
+          <td class="tablerow col-xs-1">{{i+1}}</td>
         <td class="tablerow col-xs-3">{{designation.name}}</td>
         <td class="tablerow col-xs-3">{{designation.band}}</td>
         <td class="tablerow col-xs-3">{{designation.level}}</td>
@@ -83,7 +83,7 @@
         <div class="savebtn">
           <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!designationForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
           <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
-        margin-left: 20px;">Close</button>
+        margin-left: 20px;">{{'Close'| translate}}</button>
         </div>
       </div>
     </div>
