--- a/src/app/components/employee-type/employee-type.component.html
+++ b/src/app/components/employee-type/employee-type.component.html
@@ -17,19 +17,19 @@
       </div>
     </div>
     <div layout="row" class="userlist ">{{'Employee Type List'|translate}}</div>
-    <table class="table table-striped table-hover table-fixed  settable">
+    <table class="table table-striped table-hover table-fixed  settable"[mfData]="allEmployeetype" #mf="mfDataTable">
       <thead>
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
-          <th class="col-xs-2">{{ 'Name' | translate }}</th>
+          <th class="col-xs-2"><mfDefaultSorter by="type" >{{ 'Name' | translate }}</mfDefaultSorter></th>
           <th class="col-xs-2">{{ 'SeekLeave' | translate }}</th>
           <th class="col-xs-2">{{ 'PaidLeave' | translate }}</th>
           <th class="col-xs-2">{{ 'TotalLeave' | translate }}</th>
           <th class="col-xs-2" style="margin-left: 40px">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let employeeType of allEmployeetype | filter:name| paginate: { itemsPerPage: 8, currentPage: p}">
-        <td class="tablerow col-xs-1 ">{{employeeType.id}}</td>
+      <tr *ngFor="let employeeType of mf.data | filter:name| paginate: { itemsPerPage: 8, currentPage: p}let i= index">
+        <td class="tablerow col-xs-1 ">{{i+1}}</td>
         <td class="tablerow col-xs-2">{{employeeType.type}}</td>
         <td class="tablerow col-xs-2">{{employeeType.seekLeave}}</td>
         <td class="tablerow col-xs-2">{{employeeType.paidLeave}}</td>
