--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -17,19 +17,19 @@
       </div>
     </div>
     <div layout="row" class="userlist ">{{'Employee List'|translate}}</div>
-    <table class="table table-striped table-hover table-fixed settable">
+    <table class="table table-striped table-hover table-fixed settable"[mfData]="allEmployee" #mf="mfDataTable">
       <thead>
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
-          <th class="col-xs-2">{{ 'UserId' | translate }}</th>
+          <th class="col-xs-2"><mfDefaultSorter by="userid" class="col-xs-2">{{ 'UserId' | translate }}</mfDefaultSorter></th>
           <th class="col-xs-2">{{ 'FirstName' | translate }}</th>
           <th class="col-xs-2">{{ 'LastName' | translate }}</th>
           <th class="col-xs-2">{{ 'UserType' | translate }}</th>
           <th class="col-xs-2" style="margin-left: 40px">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let employee of allEmployee | filter:name| paginate: { itemsPerPage: 8, currentPage: p} ">
-        <td class="tablerow col-xs-1">{{employee.id}}</td>
+      <tr *ngFor="let employee of mf.data | filter:name| paginate: { itemsPerPage: 8, currentPage: p} let i = index ">
+        <td class="tablerow col-xs-1">{{i+1}}</td>
         <td class="tablerow col-xs-2">{{employee.userid}}</td>
         <td class="tablerow col-xs-2">{{employee.firstName}}</td>
         <td class="tablerow col-xs-2">{{employee.lastName}}</td>
@@ -57,7 +57,7 @@
         </div>
         <div class="modal-body">
           <h6 class=" form-horizontal">
-            <span class="basicinfo">Basic Info</span>
+            <span class="basicinfo">{{'Basic Info' |translate}}</span>
           </h6>
           <div class="row" style="    margin-top: 30px">
             <div class=" form-group col-lg-6" style="margin-left: 35px;"[ngClass]="{'has-error':!employeeForm.controls['userid'].valid && employeeForm.controls['userid'].touched}">
@@ -103,7 +103,7 @@
 
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
-                <label class="label-name "> Gender :</label>
+                <label class="label-name "> {{'Gender'| translate}} :</label>
                 <div style="margin-left: 10px;">
                   <input type="radio" name="gender" value="male"> Male
                   <br>
@@ -114,7 +114,7 @@
             </div>
           </div>
           <h6 class=" form-horizontal">
-            <span class="basicinfo">Work</span>
+            <span class="basicinfo">{{'Work'|translate}}</span>
           </h6>
           <div class="row" style="    margin-top: 30px">
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
@@ -197,7 +197,7 @@
             </div>
           </div>
           <h6 class=" form-horizontal">
-            <span class="basicinfo">Personal</span>
+            <span class="basicinfo">{{'Personal'| translate}}</span>
           </h6>
           <div class="row" style="    margin-top: 30px">
             <div class=" form-group col-lg-6" style="margin-left: 35px;" [ngClass]="{'has-error':!employeeForm.controls['phoneNumber'].valid && employeeForm.controls['phoneNumber'].touched}">
@@ -232,7 +232,7 @@
           <div class="savebtn">
             <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!employeeForm.valid" (click)="toastMessageDisplay()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
-      margin-left: 20px;">Close</button>
+      margin-left: 20px;">{{'Close'| translate}}</button>
           </div>
         </div>
       </div>
