--- a/src/app/components/leave/leave.component.html
+++ b/src/app/components/leave/leave.component.html
@@ -15,20 +15,19 @@
         </div>
     </div>
     <div layout="row" class="userlist ">{{'Employeee Leave List'|translate}}</div>
-    <table class="table table-striped table-hover table-fixed settable">
+    <table class="table table-striped table-hover table-fixed settable"[mfData]="allLeave" #mf="mfDataTable">
       <thead>
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
-          <th class="col-xs-2">EmployeeId</th>
+          <th class="col-xs-2"><mfDefaultSorter by="employee.userid" >EmployeeId</mfDefaultSorter></th>
           <th class="col-xs-2">{{ 'Reason' | translate }}</th>
           <th class="col-xs-2">{{ 'FromDate' | translate }}</th>
-          <th class="col-xs-2">{{ 'Todate' | translate }}</th>
-         
+          <th class="col-xs-2">{{ 'Todate' | translate }}</th>        
           <th class="col-xs-3">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let leave of allLeave | filter:fromDate| paginate: { itemsPerPage: 8, currentPage: p}">
-        <td class="tablerow col-xs-1">{{leave.id}}</td>
+      <tr *ngFor="let leave of mf.data | filter:fromDate| paginate: { itemsPerPage: 8, currentPage: p} let i= index">
+        <td class="tablerow col-xs-1">{{i+1}}</td>
         <td class="tablerow col-xs-2">{{leave.employee.userid}}</td>
         <td class="tablerow col-xs-2">{{leave.subject}}</td>
         <td class="tablerow col-xs-2">{{leave.fromDate}}</td>
@@ -50,7 +49,7 @@
   <form [formGroup]="leaveForm" (ngSubmit)="onLeaveFormSubmit()">
     <div class="modal-dialog modaldialog">
         <div id="snackbar"[innerHTML]="toastMessage"></div>
-      <div class="modal-content" style="    height: 530px;">
+      <div class="modal-content" style="    height: 570px;">
         <div class="modal-header dialog">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           <h2 class="modal-title modaltitle">{{'Add New Leave'|translate}}</h2>
