--- a/src/app/components/leavetype/leavetype.component.html
+++ b/src/app/components/leavetype/leavetype.component.html
@@ -17,17 +17,17 @@
       </div>
     </div>
     <div layout="row" class="userlist ">{{'Leave Type List'|translate}}</div>
-    <table class="table table-striped table-hover table-fixed settable">
+    <table class="table table-striped table-hover table-fixed settable"[mfData]="allLeavetypes" #mf="mfDataTable">
       <thead>
         <tr>
           <th class="col-xs-2">{{ 'No' | translate }}</th>
-          <th class="col-xs-5">{{ 'Name' | translate }}</th>
+          <th class="col-xs-5"><mfDefaultSorter by="name" >{{ 'Name' | translate }}</mfDefaultSorter></th>
 
           <th class="col-xs-5">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let leavetype of allLeavetypes | filter:name| paginate: { itemsPerPage: 8, currentPage: p}">
-        <td class="tablerow col-xs-2">{{leavetype.id}}</td>
+      <tr *ngFor="let leavetype of mf.data | filter:name| paginate: { itemsPerPage: 8, currentPage: p} let i = index">
+        <td class="tablerow col-xs-2">{{i+1}}</td>
         <td class="tablerow col-xs-5">{{leavetype.name}}</td>
         <td class="tablerow col-xs-5">
           <span class="action-link" role="button" tabindex="0" (click)="loadLeaveTypeToEdit(leavetype.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
