--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@
     position: fixed;
 }
 .primary-container {
-    height: 100%;
+    /*height: 100%;*/
     margin-left: 20px;
     margin-top: 20px;
     width: 100%;
@@ -25,6 +25,7 @@
 .heading4 {
     font-size: 1.8rem;
     color: #444c5c;
+    font-weight: bold;
 }
 .addbtn{
     margin-top: 6%;
@@ -169,7 +170,7 @@
 }
 .error {
     margin-left: 20px;
-    color:red;
+    color:#a94442;
    padding-top: 7px;
      width: 250px 
   }
