--- a/src/app/components/resetpassword/resetpassword.component.css
+++ b/src/app/components/resetpassword/resetpassword.component.css
@@ -78,4 +78,6 @@ display: inline-block;
         -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
         animation: fadein 0.5s, fadeout 0.5s 2.5s;
     }
-  
+    .ng-touched.ng-invalid {
+        border-color:#a94442;; 
+    }
