--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -24,7 +24,7 @@
       </div>
 
       <div>
-        <button type="submit" style="margin-top: 20px;width: 250px; margin-left: 20px;" class=" btncolor" (click)="validate();">{{ 'SignIn' | translate }}</button>
+        <button type="submit" style="margin-top: 20px;width: 250px; margin-left: 20px;" class=" btncolor" (click)="validate();">{{ 'Submit' | translate }}</button>
       </div>
 
     </div>
