--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div (load)="handleKeyup($event.target.value)">
 <app-header></app-header>
 
 <div *ngIf="showSelected">
@@ -7,6 +8,6 @@
 <router-outlet>
     <ng4-loading-spinner> </ng4-loading-spinner>
 </router-outlet>
-
+</div>
 
   
