--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,3 +1,4 @@
+
 <div id="myDIV" class="sidenav">
   <ul style="margin-left: -40px;margin-top: -20px;">
       <div class="dropbtn" (click)="isActive = true" *ngFor="let n of menuList" (click)="select(n.name);" [ngClass]="{active: isSelect(n.name)}">
@@ -12,4 +13,7 @@
       </div>
   </ul>
 </div>
+
 <div id="toastbar" [innerHTML]="toast"></div>
+<button class="btn btn-primary logoutbtn" type="button" (click)="redirectToLoginPage()" >LogOut
+</button>
