<change logout button css>

--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -339,7 +339,7 @@ ul li{cursor:pointer;}
     margin-left: 91%;
     position: absolute;
     height: 45px;
-    background-color: #111111e8;
+    background-color:#45aed6;
     margin-top: 10px;
     float: right;
     font-size: 17px;
